--- a/index.html
+++ b/index.html
@@ -52,6 +52,46 @@
             </div>
         </div>
     </main>
+    <footer class="text-white">
+      <div class="container py-4">
+          <div class="row">
+              <div class="col-md-6">
+                  <div class="row">
+                      <div class="col-md-4 mb-3 mb-md-0">
+                          <div class="icono-texto text-center">
+                              <a href="#"><i class="fa-solid fa-check"></i></a>
+                              <div class="texto1">Compra segura</div>
+                          </div>
+                      </div>
+                      <div class="col-md-4 mb-3 mb-md-0">
+                          <div class="icono-texto text-center">
+                              <a href="#"><i class="fa-solid fa-rotate-right"></i></a>
+                              <div class="texto2">Garantía</div>
+                          </div>
+                      </div>
+                      <div class="col-md-4">
+                          <div class="icono-texto text-center">
+                              <a href="#"><i class="fa-solid fa-credit-card"></i></a>
+                              <div class="texto3">Todos los medios de pago</div>
+                          </div>
+                      </div>
+                  </div>
+                  <p class="mt-3 mt-md-0">Copyright Santy Hogar - 2024. Todos los derechos reservados.
+                      Defensa de las y los consumidores.</p>
+              </div>
+          </div>
+      </div>
+      <div class="container text-center mt-3 mt-md-0">
+          <div class="redes">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-whatsapp"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+      </div>
+  </footer>
+    
+
+
 
     
 
