agregue una etiqueta meta

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="páginas/productos.html">
     <link rel="stylesheet" href="páginas/servicios.html">
     <title>Santy Hogar</title>
+    <meta name="author" content="Lucas Radicci">
     <meta name="descripcion" content="Santy Hogar ofrece una amplia seleccion de servicios y productos para el hogar, desde muebles hasta decoracion y electrodomesticos. ">
 </head>
 <body>
