--- a/páginas/productos.html
+++ b/páginas/productos.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos.css">
     <title>Productos</title>
-    <meta name="description" content="">
+    <meta name="description" content="Productos de alta calidad">
+    <meta name="description" content="Descubre nuestra amplia selección de electrodomésticos de última generación en nuestro local. Desde lavarropasy neveras hasta pavas electricas y aire acondicionado, ofrecemos productos de calidad para equipar tu hogar. ¡Visítanos hoy mismo para encontrar las mejores ofertas y soluciones para tus necesidades domésticas!.">
+    
 </head>
 <body>
   <header>
@@ -39,6 +41,7 @@
       </div>
     </div>
   </header>
+  <main>
   <h2>Productos</h2>
         <div class="container">
             <div class="row">
