--- a/páginas/servicios.html
+++ b/páginas/servicios.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos.css">
     <title>Servicios</title>
-    <meta name="description" content="">
+    <meta name="description" content="Descubre nuestros servicios especializados en reparación, instalación y mantenimiento de electrodomésticos. Desde asesoramiento personalizado hasta entregas a domicilio en todo el país. ¡Confía en nosotros para mantener tu hogar funcionando sin problemas.">
 </head>
 <body>
   <header>
@@ -39,6 +39,46 @@
       </div>
     </div>
   </header>
+  <main class="container">
+    <section class="services row row-cols-1 row-cols-md-2 row-cols-lg-3">
+      <div class="col">
+        <div class="service1">
+          <h3>Venta de Electrodomésticos</h3>
+          <p>Ofrecemos una amplia selección de electrodomésticos de alta calidad.</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="service2">
+          <h3>Reparación de Electrodomésticos</h3>
+          <p>Contamos con un servicio técnico especializado en la reparación de electrodomésticos.</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="service3">
+          <h3>Instalación de Electrodomésticos</h3>
+          <p>Ofrecemos servicio de instalación profesional para todos los electrodomésticos que vendemos.</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="service4">
+          <h3>Asesoramiento técnico</h3>
+          <p>Nuestro personal está siempre disponible para brindarte asesoramiento técnico sobre el uso y mantenimiento adecuado de tus electrodomesticos.</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="service5">
+          <h3>Servicio de entrega a domicilio</h3>
+          <p>Ofrecemos servicios de entrega a domicilio para que puedas recibir tus electrodomesticos directamente en la comodidad de tu hogar.</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="service6">
+          <h3>Financiamiento</h3>
+          <p>Para facilitar tu compra, ofrecemos opciones de financiamiento flexibles que se ajustan a tus necesidades y presupuesto.</p>
+        </div>
+      </div>
+    </section>
+  </main>
 
 
 
