modifique el footer, agregando el contacto. Y en el archivo contacto.html agregue un main con un formulario de contacto y una etiqueta p

--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
               </div>
           </div>
       </div>
+      <div class="container">
+        <h2 class="mt-4">Contactános</h2>
+        <div class="contactános">
+          <ul class="list-unstyled">
+            <li><i class="fab fa-whatsapp"></i> <span class="ml-2">543513426790</span></li>
+            <li><i class="fas fa-phone"></i> <span class="ml-2">3513426790</span></li>
+            <li><i class="fas fa-envelope"></i> <span class="ml-2">santyhogar@gmail.com</span></li>
+            <li><i class="fas fa-location-dot"></i> <span class="ml-2">Ceelestino Vidal 2345</span></li>
+          </ul>
+        </div>
+      </div>
       <div class="container text-center mt-3 mt-md-0">
           <div class="redes">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
