--- a/páginas/contacto.html
+++ b/páginas/contacto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos.css">
     <title>Contacto</title>
-    <meta name="description" content="">
+    <meta name="description" content="Encuentra el mejor servicio de atención al cliente y soporte técnico en nuestro local de electrodomésticos. Contactános para resolver cualquier duda o solicitar asistencia profesional con productos.">
 
 </head>
 <body>
@@ -40,6 +40,38 @@
       </div>
     </div>
   </header>
+  <main>
+    <section class="contact-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-xl-4">
+            <h2>Formulario de Contacto</h2>
+            <form action="#" method="POST">
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre:</label>
+                <input type="text" class="form-control" id="nombre" name="nombre" required>
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+              </div>
+              <div class="mb-3">
+                <label for="mensaje" class="form-label">Mensaje:</label>
+                <textarea class="form-control" id="mensaje" name="mensaje" rows="5" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+          </div>
+          <div class="col-md-6 col-xl-8">
+            <div class="mb-3">
+              <p>Nuestro equipo en el local de electrodomésticos está comprometido a brindarte la mejor atención posible. Desde ayudarte a seleccionar el electrodoméstico perfecto para tus necesidades hasta ofrecerte asistencia técnica postventa, estamos aquí para ayudarte en cada paso del camino. No dudes en visitarnos en persona, llamarnos o enviarnos un correo electrónico para obtener respuestas a tus preguntas o para programar servicios de mantenimiento. Estamos ansiosos por ofrecerte una experiencia de cliente excepcional y resolver cualquier consulta que puedas tener.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
 
 
 
@@ -74,6 +106,17 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <h2 class="mt-4">Contactános</h2>
+        <div class="contactános">
+          <ul class="list-unstyled">
+            <li><i class="fab fa-whatsapp"></i> <span class="ml-2">543513426790</span></li>
+            <li><i class="fas fa-phone"></i> <span class="ml-2">3513426790</span></li>
+            <li><i class="fas fa-envelope"></i> <span class="ml-2">santyhogar@gmail.com</span></li>
+            <li><i class="fas fa-location-dot"></i> <span class="ml-2">Ceelestino Vidal 2345</span></li>
+          </ul>
+        </div>
+      </div>
     <div class="container text-center mt-3 mt-md-0">
         <div class="redes">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
